--- a/SportsApp/Base.lproj/Main.storyboard
+++ b/SportsApp/Base.lproj/Main.storyboard
@@ -5,24 +5,69 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Home-->
+        <scene sceneID="ITr-oc-fQc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SportsApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="TqK-GK-yOT" customClass="ViewController" customModule="SportsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RPc-5T-XnK">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="vdd-UW-zmm">
+                                <rect key="frame" x="0.0" y="125" width="393" height="644"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lBo-WL-Zuf">
+                                    <size key="itemSize" width="183" height="168"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Vg4-IZ-zrO">
+                                        <rect key="frame" x="0.0" y="0.0" width="183" height="168"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HTb-hf-8hL">
+                                            <rect key="frame" x="0.0" y="0.0" width="183" height="168"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </collectionViewCellContentView>
+                                        <rect key="contentStretch" x="0.0" y="0.10000000000000001" width="1" height="0.94999999999999996"/>
+                                        <size key="customSize" width="183" height="168"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sports" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqp-lI-7y7">
+                                <rect key="frame" x="18" y="59" width="357" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="j4i-EQ-qA7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="j4i-EQ-qA7" firstAttribute="trailing" secondItem="rqp-lI-7y7" secondAttribute="trailing" constant="18" id="1df-gc-1fI"/>
+                            <constraint firstItem="rqp-lI-7y7" firstAttribute="leading" secondItem="j4i-EQ-qA7" secondAttribute="leading" constant="18" id="3q4-3N-q6G"/>
+                            <constraint firstItem="rqp-lI-7y7" firstAttribute="top" secondItem="j4i-EQ-qA7" secondAttribute="top" id="XQY-gL-Az8"/>
+                            <constraint firstItem="vdd-UW-zmm" firstAttribute="trailing" secondItem="j4i-EQ-qA7" secondAttribute="trailing" id="c60-kr-xmN"/>
+                            <constraint firstItem="vdd-UW-zmm" firstAttribute="leading" secondItem="j4i-EQ-qA7" secondAttribute="leading" id="cLl-bg-S0k"/>
+                            <constraint firstItem="vdd-UW-zmm" firstAttribute="top" secondItem="rqp-lI-7y7" secondAttribute="bottom" constant="27" id="j1S-vT-fBf"/>
+                            <constraint firstItem="vdd-UW-zmm" firstAttribute="bottom" secondItem="j4i-EQ-qA7" secondAttribute="bottom" id="loW-6R-lGZ"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="homekit" catalog="system" id="uJV-Ur-1TM"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="aZl-wY-wCI"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="HomeCollectionV" destination="vdd-UW-zmm" id="lo2-Jn-8GR"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RA7-iH-d7R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1028.2442748091603" y="4.9295774647887329"/>
+            <point key="canvasLocation" x="968.70229007633588" y="4.9295774647887329"/>
         </scene>
         <!--Tab BarVC-->
         <scene sceneID="6sW-wa-C7D">
@@ -34,12 +79,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.44392717790043396" green="0.25497187253203524" blue="0.4965764925335393" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.4433673024" green="0.25617074969999998" blue="0.49773222210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="yk2-YE-GkI"/>
-                        <segue destination="gav-7W-Rrq" kind="relationship" relationship="viewControllers" id="LIE-W3-QzH"/>
+                        <segue destination="TqK-GK-yOT" kind="relationship" relationship="viewControllers" id="hV8-IN-Mfw"/>
+                        <segue destination="gav-7W-Rrq" kind="relationship" relationship="viewControllers" id="IPQ-45-CdG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2rb-1B-hPj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -59,8 +104,8 @@
     </scenes>
     <resources>
         <image name="homekit" catalog="system" width="128" height="104"/>
-        <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
